<resources>
    <string name="app_name">CRUD Firebase</string>
    <string name="action_save">Salvar</string>
    <string name="action_limpar">Limpar</string>
    <string name="action_usuarios">Visualizar Usuários</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="telefone">Telefone</string>
    <string name="celular">Celular</string>
    <string name="cidade">Cidade</string>
    <string name="cpf">CPF</string>
    <string name="banner_unit_id">ca-app-pub-2446788647018391/8727887162</string>
</resources>
